[CEP-005] Adding tests.